--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 rayon = {git = "https://github.com/ma1ko/rayon"}
 rayon_logs = { git = "https://github.com/ma1ko/rayon-logs"}
+rayon_adaptive = {git = "https://github.com/ma1ko/rayon-adaptive"}
 lazy_static = "*"
 crossbeam-utils = "*"
 criterion = {git = "https://github.com/ma1ko/criterion.rs"}
