Turns out I actually need the num crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ crossbeam-utils = "*"
 rand = "*"
 itertools = "*"
 num_cpus = "*"
+num = "*"
 
 [dev-dependencies]
 criterion = {git = "https://github.com/ma1ko/criterion.rs"}
